<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/card_background"
    android:layout_margin="4dp"
    android:padding="12dp"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/orderTourNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_order_tour"
                android:textColor="@color/primary_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/orderDateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/item_order_date"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/orderPriceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/item_order_price"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/orderStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_orange"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/status_new"
            android:textColor="@color/text_white"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>